--- a/views/participants-section/music/gnatenko.ejs
+++ b/views/participants-section/music/gnatenko.ejs
@@ -1,5 +1,5 @@
 <div class="participant">
-  <h3 class="heading-3">Koloah</h3>
+  <h3 class="heading-3">Volodymyr Gnatenko</h3>
   <div class="participant__pic">
     <img src="/src/imgs/participants/gnatenko-u.jpeg" alt="koloah serenity cover" />
     <div>
@@ -7,5 +7,14 @@
       <p class="heading-5">Аудіо Перформанс (Otel')</p>
     </div>
   </div>
-  <p class="participant__desc paragraph-min"></p>
+  <p class="participant__desc paragraph-min">
+    Володимир Гнатенко — український артист і продюсер, відомий своєю схильністю до
+    лайв-перформансів та винятковою продуктивністю — за три роки він випустив 11 альбомів. Його
+    останній реліз вийшов у квітні 2022 року та названий “U” на честь України та українців. З
+    початку війни Володимир вирішив залишитись вдома в Києві, де й записав другу частину нового
+    альбому. Перша половина треків була створена в мирний час, але вся музика в релізі “U” несе одні
+    емоції — переживання, що відчував кожен з українців, коли в країну прийшла війна. За словами
+    артиста, головна ідея альбому — “ненависть до кацапів та гордість за українців”. Саме тому
+    музика з “U” звучить життєстверджуюче та з надією на світле майбутнє.
+  </p>
 </div>
