--- a/views/participants-section/cinema.ejs
+++ b/views/participants-section/cinema.ejs
@@ -1,4 +1,5 @@
 <div class="cinema participants-list">
   <%- include("cinema/dosch.ejs") %><%- include("cinema/school.ejs") %><%-
-  include("cinema/projavy.ejs") %><%- include("cinema/feldman-cartoon.ejs") %>
+  include("cinema/projavy.ejs") %><%- include("cinema/feldman-cartoon.ejs") %><%-
+  include("cinema/monochrome.ejs") %>
 </div>
