--- a/views/participants-section/cinema/monochrome.ejs
+++ b/views/participants-section/cinema/monochrome.ejs
@@ -8,22 +8,7 @@
     </div>
   </div>
   <p class="participant__desc paragraph-min">
-    Привіт. Мене звати Антон Овчінніков. Я хореограф. 25 лютого 2022 року вранці я виїхав з Києва і
-    вирушив у вимушену ізоляцію. Київ почали обстрілювати крилатими ракетами і я переїхав до села
-    Морозівка за 50 км від Києва. Це було скоріше емоційне рішення, але тоді воно здалося мені
-    правильним. Вже за тиждень війна була за 20 км від місця, де я жив. Цілодобово ми чули вибухи та
-    стрілянину і ще через тиждень цілком до цих звуків звикли. А на початку квітня ЗСУ вибили
-    російські війська із прилеглих сіл і настала тиша. Звикнути до абсолютної тиші було досить
-    важко. Поступово я почав повертати своєму тілу рухливість і виходити з заціпеніння. Тоді я
-    вирішив зняти кілька відео імпровізацій, щоб з боку подивитися на тілесні трансформації, які зі
-    мною трапилися. Весь час до цього я відчував себе абсолютно паралізованим – я не міг змусити
-    себе рухатися чи взагалі щось робити. Єдине, що в мене виходило, це писати вірші - несподівано
-    думки у почуття почали набувати форми слів. Коли я аналізую своє сприйняття подій та інформації
-    протягом цього часу, у мене складається враження, що все стало абсолютно чорно-білим. Напівтони
-    зникли і всі люди розділилися на «своїх» та «чужих». Початок руху став для мене можливістю
-    повернутись до кольорового сприйняття дійсності. Можливість зберегти образне сприйняття світу за
-    межею добра та зла. Мені здалося важливим задокументувати цей момент. Допомагати мені не було
-    кому і довелося всі процеси організовувати самому - зйомку, монтаж та написання музики. Так
-    вийшов цей фільм."
+    Відео-перформанс, під час якого Антон Овчінніков, хореограф, документує процес адаптації до
+    "тихого" життя після місяця життя під обстрілами.
   </p>
 </div>
