--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,8 @@
 <body class="">
   <%- include('layout/nav.ejs') %>
   <main>
-    <%- include('hero.ejs') %><%- include('participants.ejs') %><%- include('support.ejs') %>
+    <%- include('hero.ejs') %><%- include('participants.ejs') %><%- include('support.ejs') %><%-
+    include('partners.ejs') %>
   </main>
   <%- include('layout/end.ejs') %>
 </body>
