--- a/views/participants-section/visual.ejs
+++ b/views/participants-section/visual.ejs
@@ -2,5 +2,6 @@
   <%- include("visual/feldman.ejs") %><%- include("visual/george-ivanchenko.ejs") %><%-
   include("visual/segal.ejs") %><%- include("visual/ivancyk.ejs") %><%-
   include("visual/kalynchuk.ejs") %><%- include("visual/commercialpublicart.ejs") %><%-
-  include("visual/side.ejs") %><%- include("visual/kosovych.ejs") %>
+  include("visual/side.ejs") %><%- include("visual/kosovych.ejs") %><%- include("visual/cosmo.ejs")
+  %><%- include("visual/vertwen.ejs") %><%- include("visual/shevchenko.ejs") %>
 </div>
