--- a/public/css/main.css
+++ b/public/css/main.css
@@ -361,8 +361,7 @@ button {
   width: 600rem; }
   .timing .wrapper img {
     width: 100%;
-    height: 100%;
-    object-fit: fill; }
+    height: 100%; }
 
 .partners > div {
   display: flex;
